<resources>
    <string name="app_name">Project5</string>

    <string-array name="flavors">
        <item>Build your own</item>
        <item>Deluxe</item>
        <item>BBQ Chicken</item>
        <item>Meatzza</item>
    </string-array>

    <string-array name="toppings">
        <item>Sausage</item>
        <item>BBQ Chicken</item>
        <item>Beef</item>
        <item>Ham</item>
        <item>Pepperoni</item>
        <item>Green Pepper</item>
        <item>Onion</item>
        <item>Mushroom</item>
        <item>Pineapple</item>
        <item>Black Olives</item>
        <item>Provolone</item>
        <item>Spinach</item>
        <item>Cheddar</item>
    </string-array>

    <string-array name="crust">
        <item>Deep Dish</item>
        <item>Pan</item>
        <item>Stuffed</item>
        <item>Brooklyn</item>
        <item>Thin</item>
        <item>Hand Tossed</item>
    </string-array>

    <string-array name="pizzaStyle">
        <item>New York Style</item>
        <item>Chicago Style</item>
    </string-array>

    <string-array name="size">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>

    <string name="RU_Pizzeria">RU Pizzeria</string>

    <string name="temp">temp</string>

    <string name="small">small</string>

    <string name="medium">medium</string>

    <string name="large">large</string>

    <string name="crust">Crust</string>

    <string name="pizzaPrice">Pizza Price $</string>

    <string name="addToOrder">Add To Order</string>

    <string name="topping">Topping</string>

    <string name="chicagoStyePizza" >Chicago Style Pizza</string>

    <string name="NY_StylePizza" >New York Style Pizza</string>

    <string name="currentOrder">Current Order</string>

    <string name="orderNumber">Order Number</string>

    <string name="subtotal">subtotal $</string>

    <string name="salesTax">sales tax $</string>

    <string name="orderTotal">order total $</string>

    <string name="removePizza">Remove Pizza</string>

    <string name="clearOrder">Clear Order</string>

    <string name="placeOrder">Place Order</string>

    <string name="storeOrders" >Store Orders</string>

    <string name="storeOrderTotal" >Order Total (tax included) $</string>

    <string name="cancelOrder" >Cancel Order</string>

    <string name="dialogYes" >Yes</string>

    <string name="dialogNo" >No</string>

</resources>