<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CurrentOrderActivity">

    <TextView
        android:id="@+id/currentOrderHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currentOrder"
        android:textSize="32dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/orderNumberHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="32dp"
        android:text="@string/orderNumber"
        android:textStyle="bold"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentOrderHeader" />

    <TextView
        android:id="@+id/orderNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/temp"
        android:textStyle="bold"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/orderNumberHeader"
        app:layout_constraintTop_toBottomOf="@+id/currentOrderHeader" />

    <ListView
        android:id="@+id/currentOrderList"
        android:layout_width="414dp"
        android:layout_height="382dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderNumberHeader"
        android:choiceMode="singleChoice"
        android:listSelector="#666666"/>

    <TextView
        android:id="@+id/subtotalHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="16dp"
        android:text="@string/subtotal"
        android:textStyle="bold"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentOrderList" />

    <TextView
        android:id="@+id/subtotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/temp"
        android:textStyle="bold"
        android:textSize="16dp"
        app:layout_constraintStart_toEndOf="@+id/subtotalHeader"
        app:layout_constraintTop_toBottomOf="@+id/currentOrderList" />

    <TextView
        android:id="@+id/salesTaxHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/salesTax"
        android:textStyle="bold"
        android:textSize="16dp"
        app:layout_constraintStart_toEndOf="@+id/subtotal"
        app:layout_constraintTop_toBottomOf="@+id/currentOrderList" />

    <TextView
        android:id="@+id/salesTax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/temp"
        android:textStyle="bold"
        android:textSize="16dp"
        app:layout_constraintStart_toEndOf="@+id/salesTaxHeader"
        app:layout_constraintTop_toBottomOf="@+id/currentOrderList" />

    <TextView
        android:id="@+id/orderTotalHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:text="@string/orderTotal"
        android:textStyle="bold"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtotal" />

    <TextView
        android:id="@+id/orderTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp"
        android:textStyle="bold"
        android:textSize="16dp"
        app:layout_constraintStart_toEndOf="@+id/orderTotalHeader"
        app:layout_constraintTop_toBottomOf="@+id/salesTaxHeader" />

    <Button
        android:id="@+id/removePizzaButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="32dp"
        android:text="@string/removePizza"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderTotalHeader" />

    <Button
        android:id="@+id/clearOrderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/clearOrder"
        app:layout_constraintStart_toEndOf="@+id/removePizzaButton"
        app:layout_constraintTop_toBottomOf="@+id/orderTotal" />

    <Button
        android:id="@+id/placeOrderButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="16dp"
        android:text="@string/placeOrder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/removePizzaButton" />
</androidx.constraintlayout.widget.ConstraintLayout>