<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.StoreOrdersActivity">

    <TextView
        android:id="@+id/storeOrdersHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/storeOrders"
        android:textSize="32dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/storeOrderNumberHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="32dp"
        android:text="@string/orderNumber"
        app:layout_constraintBottom_toTopOf="@+id/storeOrdersList"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/storeOrdersHeader"
        app:layout_constraintVertical_bias="0.5" />

    <Spinner
        android:id="@+id/orderNumberSpinner"
        android:layout_width="139dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/storeOrdersList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/storeOrderNumberHeader"
        app:layout_constraintTop_toBottomOf="@+id/storeOrdersHeader"
        app:layout_constraintVertical_bias="0.5" />

    <ListView
        android:id="@+id/storeOrdersList"
        android:layout_width="414dp"
        android:layout_height="382dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/storeOrderNumberHeader" />

    <TextView
        android:id="@+id/storeOrderTotalHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="36dp"
        android:text="@string/storeOrderTotal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/storeOrdersList" />

    <TextView
        android:id="@+id/storeOrderTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/storeOrderTotalHeader"
        app:layout_constraintTop_toBottomOf="@+id/storeOrdersList" />

    <Button
        android:id="@+id/cancelOrderButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/cancelOrder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/storeOrderTotalHeader" />

</androidx.constraintlayout.widget.ConstraintLayout>